<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">이름을뭘로할까</string>
    <string name="barname">이정원</string>
    <string name="title_section1">시간으로 정렬</string>
    <string name="title_section2">사진으로 정렬</string>
    <string name="title_section3">내가 들른곳</string>
    <string name="title_section4">설정</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    
    <string name="write_diary_writesubmit_btn">등록</string>
    <string name="write_diary_daypicker_btn">날짜</string>
    <string name="write_diary_datepicker_btn">시간</string>
    <string name="write_diary_imgpicker_btn">사진</string>
    <string name="write_diary_musicpicker_btn">음악</string>
    <string name="write_diary_locationpicker_btn">지도</string>
    <string name="write_diary_urllink_btn">URL</string>
    
    <string name="imagepicker_submit" >확인</string>
     <string name="hello">Hello World, GoogleMapkiexampleActivity!</string>

	<string name="longTouchPlease">길게 터치한 후 기다려 주세요.</string>
	<string name="map_not_ready">Map is not ready yet</string>
	<string name="searchName">검색명</string>
    

</resources>
